# agent

./: README.md  prd.md
autonomous-ai-system/services/gateway/: pyproject.toml
autonomous-ai-system/services/gateway/gateway/: main.py
autonomous-ai-system/services/model-router/: litellm.yaml
autonomous-ai-system/storage/schemas/: core.py
